--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,17 @@
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f4f4f4;
+}
+
+header{
+  position: fixed;
+  z-index: 2;
+  width: 100%;
+  height: 80px;
+}
+
 header nav {
   display: flex;
   background-color: black;
@@ -5,16 +19,11 @@ header nav {
   justify-content: space-between;
   align-items: center;
   padding-left: 20px;
+  padding: 1rem;
 }
-
-#logo {
-  background-color: rgb(176, 190, 190);
-  color: grey;
-  padding: 5px;
-  height: 40px;
-  width: 80px;
-  display: flex;
-  align-items: center;
+.shop-logo {
+  width: 120px;
+  margin: 0px;
 }
 
 #nav-list {
@@ -39,17 +48,17 @@ header nav {
 
 #offer-section {
   position: relative;
-  display: inline;
+  padding-top: 80px;
 }
-#offer-img {
-  width: 100%;
-  object-fit: cover;
-  height: 450px;
-  background-position: center;
-  background-size: cover;
-  background-image: url("https://as1.ftcdn.net/v2/jpg/09/38/98/40/1000_F_938984060_bRjx69M95XddnX04yELB0CHQJB0QyiXw.jpg");
-  background-repeat: no-repeat;
-}
+  #offer-img {
+    width: 100%;
+    object-fit: cover;
+    height: 350px;
+    background-position: bottom;
+    background-size: cover;
+    background-image: url("https://placehold.co/600x200?text=offer-image");
+    background-repeat: no-repeat;
+  }
 #offer-section button {
   position: absolute;
   bottom: 5%;
@@ -68,8 +77,91 @@ header nav {
   background-color: rgb(91, 87, 87);
 }
 
-h2 {
+#our-menu h2{
   text-align: center;
-  margin-bottom: 40px;
   font-size: 2.5rem;
+  font-weight: bold;
+}
+
+#our-menu h2::after{
+  content: "";
+  width: 60px;
+  height: 4px;
+  background-color: red;
+  display: block;
+  margin: 10px auto 0px;
+  border-radius: 2px;
+}
+
+.best-seller{
+  padding-top: 0px;
+  margin: 40px;
+  background-color: rgba(236, 231, 231, 0.84);
+}
+
+.menu-header{
+  display: flex;
+  justify-content: space-between;
+}
+
+.menu-header h3{
+  font-size: 2rem;
+  border-left: 5px solid red;
+  padding-left: 10px;
+  margin-bottom: 20px;
+}
+.menu-card{
+  border-radius: 1rem;
+  overflow: hidden;
+}
+
+.menu-card img{
+  width: 100%;
+  height: 160px;
+  object-fit: cover;
+}
+
+.menu-items{
+  display: flex;
+  /* gap:3px; */
+  justify-content: space-around;
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
+.menu-card-container{
+  background-color: #fff;
+  margin-top: -3px;
+  padding: 16px;
+}
+
+.menu-card-container h4{
+  color: red;
+  font-size: 1.25rem;
+  margin: 0px;
+}
+
+.menu-card-container span{
+  font-weight: bold;
+}
+.strike-price{
+  color: #a5a0a0;
+}
+
+.add-to-cart-btn{
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  padding: 15px;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.menu-header button{
+  height: 2rem;
+  align-self: center;
+  margin-right: 10px;
+  background-color: black;
+  color: #fff;
+  cursor: pointer;
 }
