--- a/Style.css
+++ b/Style.css
@@ -123,7 +123,7 @@ header nav {
 
 .menu-items{
   display: flex;
-  /* gap:3px; */
+  gap:10px;
   justify-content: space-around;
   margin-left: 100px;
   margin-right: 100px;
@@ -165,3 +165,67 @@ header nav {
   color: #fff;
   cursor: pointer;
 }
+
+footer{
+  background-color: #333;
+  color: #f1f1f1;
+  padding-bottom: 10px;
+}
+
+#footer-container{
+  display: flex;
+  justify-content: space-between;
+  padding: 30px;
+  align-items: center;
+}
+.color-red h3{
+  font-size: 1.5rem;
+  color: red;
+}
+
+.footer-links li {
+  list-style: none;
+  padding: 10px 9px 0px 0px;
+}
+.footer-links li a{
+  text-decoration: none;
+  color: #fff;
+  padding: 10px;
+  padding-left: 0px;
+  transition: color 0.3s;
+}
+
+.footer-links{
+  padding: 0px;
+}
+.subscribe-form{
+  display: flex;
+  justify-content: space-between;
+}
+
+.subscribe-form input{
+  background-color: #fff;
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  width: 200px;
+}
+
+.subscribe-form button{
+  background-color: red;
+  color: white;
+  border-radius: 5px;
+  width: 100px;
+}
+
+.footer-bottom{
+  text-align: center;
+  margin-top: 30px;
+  border-top: 1px solid #555;
+}
+
+.footer-bottom p a {
+  color: #fff;
+  text-decoration: none;
+}
+
